--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.7.0",
+    "mongoose-unique-validator": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
